# heart_attack

./: HeartAttackPredict.ipynb  pyproject.toml  requirements.txt
