[tool.poetry]
name = "CVRisk_HeartAttack_EDA"
version = "0.1.0"
description = "EDA on kaggle CV dataset"
authors = ["eo1989 <eorlowski6@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
scipy = "^1.7.2"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
bokeh = "^2.4.1"
plotly = "^5.4.0"
scikit-learn = "^1.0.1"
sklearn = "^0.0"
xgboost = "^1.5.0"
catboost = "^1.0.3"
arviz = "^0.11.4"

[tool.poetry.dev-dependencies]
ipykernel = "^6.5.1"
ipywidgets = "^7.6.5"
ipywidgets-bokeh = "^1.2.1"
jupyter-bokeh = "^3.0.4"
arviz = "^0.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
