[tool.poetry]
name = "CVRisk_HeartAttack_eda"
version = "0.1.0"
description = ""
authors = ["eo1989 <eorlowski6@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
statsmodels = "mlxtend"
mlxtend = "^0.20.0"
pandas = "^1.4.3"
sklearn = "^0.0"
plotly = "^5.9.0"
seaborn = "^0.11.2"
xgboost = "^1.6.1"
lightgbm = "^3.3.2"
bokeh = "^2.4.3"
catboost = "^1.0.6"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
nbformat = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
